# testrepo

./: README.md
Sequ-master/: README  README.md  README~
Sequ-master/Sequ/sequ-cl0/: Makefile  README  config.status  configure  configure.ac
Sequ-master/Sequ/sequ-cl0/src/: Makefile  Makefile.am  Makefile.in  sequ-cl0
Sequ-master/Sequ/sequ-cl0/src/sequ/: Makefile  Makefile.am  __init__.py  sequ-cl0.py  sequ.py  sequ.py~
Sequ-master/Sequ/sequ-cl0/src/sequ/doc/: sequdoc.rst
Sequ-master/Sequ/sequ-cl1/: Makefile  config.status  configure  configure.ac
Sequ-master/Sequ/sequ-cl1/src/: Makefile  Makefile.am  Makefile.in  sequ-cl1  sequ-cl1.in
Sequ-master/Sequ/sequ-cl1/src/sequ/: Makefile  Makefile.am  Makefile.in  sequ.py
Sequ-master/Sequ/sequ-cl2/: Makefile  config.status  configure  configure.ac
Sequ-master/Sequ/sequ-cl2/src/: Makefile  Makefile.am  Makefile.in  sequ-cl2  sequ-cl2.in
Sequ-master/Sequ/sequ-cl2/src/sequ/: Makefile  Makefile.am  Makefile.in  sequ.py
Sequ-master/Sequ/sequ-cl3/: Makefile  config.status  configure  configure.ac
Sequ-master/Sequ/sequ-cl3/src/: Makefile  Makefile.am  Makefile.in  sequ-cl3.in  sequ-cl3.in~
Sequ-master/Sequ/sequ-cl3/src/sequ/: Makefile  Makefile.in  romanl.py  romanl.py~  romanu.py  seqmapio.py
Sequ-master/Sequ/sequ-cl4/: Makefile  config.status  configure  configure.ac  seqwrite.py  test.txt  text.txt
Sequ-master/Sequ/sequ-cl4/src/: Makefile  Makefile.am  Makefile.in  sequ-cl4.in
Sequ-master/Sequ/sequ-cl4/src/sequ/: Makefile  Makefile.am  Untitled Document 1  romanu.py  seqmapio.py  seqmapio.py~
Sequ-master/Sequ/tests/: test_romanl.py  test_seqmapio.py  test_sequcl3.py
Sequ-master/Sequ_Assignments/: sequ_notes.txt
Sequ-master/Sequ_Assignments/Assignment1/: sequ_cl0.py
Sequ-master/Sequ_Assignments/Assignment2/: cl0_pseudo.txt  sequ_cl0.py  tests_sequ_cl0.py
Sequ-master/Sequ_Assignments/Assignment3/: sequ-spec.mdwn  sequ_cl1.py
Sequ-master/Sequ_Assignments/Assignment4/: .coverage  pseudo_cl2.txt  sequ_cl2.py  (+1 more)
(+60 files in other folders)
